
Display errors in result tab:
  SQL execution errors are now additionally displayed in a temporary result tab.
  This new feature is switched on by default and can be switched off in
  Menu File --> New Session Properties --> Tab SQL --> Show SQL execution errors in result tab

Bug-fixes:

3148653: Missing App Icon on Mac OS X (Fix is available in the Mac OS X 3.2.1 installer file)


3.2.1 (12/29/2010)
==================

Enhancements:

Feature request 3030479: New global preference that allows scrollable tabbed pane for Session tabs.

Feature request 1608435: (checkbox in I18N administration: "show only bundles with missing translations").
        Thanks to Ivo Neri for the patch.

Updated translation for Italian (Thanks to Ivo Neri)

New translation
 Japanese (Thanks to Toshiki IGA)

Graph Plugin: Multiple tables can now be selected and moved simultanously
  Thanks to Markus Schulz for the patch.

New Session property to let SQuirreL set fetch size (call Statement.setFetchSize(int)).
  See Session properties --> SQL tab.
  Thanks to Stefan (wis775) for the patch.


Bug-fixes:

3138746: Typo within PluginClassName of SyntaxPlugin.
3137390: Cannot connect after latest software update.
3136386: Deleting table content via context menu does not work.
3123014: StackOverflow ProgressCallBackDialog.
                         Thanks to Stefan (wis775) for the patch.
3055859: Regular expressions did not work in find & replace dialog.
                         Thanks to Stefan (wis775) for the patch.

Fixed translation label that was not being applied to "Initialize Session Timezone" checkbox.
  Thanks to Ivo Neri for the patch.


3.2.0 (11/21/2010)
==================

Enhancements:

Updated Translations:
 - Chinese (Thanks to xpdz)
 - French  (Thanks to Erwan DUROSELLE)
 
SQL Scripts Plugin:
  New preference that allows to choose the escape string for new lines. See Global Preferences --> Tab SQL Scripts
  (See patch #3079664 by Paul Wagland)

Hibernate Plugin: